--- a/style.css
+++ b/style.css
@@ -7,3 +7,10 @@ body {
 h1 {
   background-color: white;
 }
+nav ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+}
