--- a/style.css
+++ b/style.css
@@ -7,10 +7,22 @@ body {
 h1 {
   background-color: white;
 }
-nav ul{
+.nav ul{
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: white;
+}
+
+.nav li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.nav li a:hover {
+  background-color: #ACACAC; 
 }
