--- a/style.css
+++ b/style.css
@@ -26,3 +26,12 @@ h1 {
 .nav li a:hover {
   background-color: #ACACAC; 
 }
+
+@font-face {
+  font-family: myFont;
+  src: url(sansation_light.woff);
+}
+
+p {
+  font-family: myFont; 
+}
