--- a/style.css
+++ b/style.css
@@ -110,13 +110,16 @@ p {
 }
 
 .img1 {
-  width: 30% 
+  width: 30%;
+  height: auto;
 }
 
 .img2 {
-  width: 30% 
+  width: 30%;
+  height: auto;
 }
 
 .img3 {
-  width: 30% 
+  width: 30%;
+  height: auto;
 }
