--- a/style.css
+++ b/style.css
@@ -103,6 +103,12 @@ p {
   padding: 15px;
 }
 
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 @media screen and (max-width:600px) {
   .column {
     width: 100%; 
